gi/importer.py
@@ -39,34 +39,6 @@ repository = Repository.get_default()
 modules = {}
 
 
-def _get_all_dependencies(namespace):
-    """Like get_dependencies() but will recurse and get all dependencies.
-    The namespace has to be loaded before this can be called.
-
-    ::
-
-        _get_all_dependencies('Gtk') -> ['Atk-1.0', 'GObject-2.0', ...]
-    """
-
-    todo = repository.get_dependencies(namespace)
-    dependencies = []
-
-    while todo:
-        current = todo.pop()
-        if current in dependencies:
-            continue
-        ns, version = current.split("-", 1)
-        todo.extend(repository.get_dependencies(ns))
-        dependencies.append(current)
-
-    return dependencies
-
-
-# See _check_require_version()
-_active_imports = []
-_implicit_required = {}
-
-
 @contextmanager
 def _check_require_version(namespace, stacklevel):
     """A context manager which tries to give helpful warnings
@@ -80,47 +52,30 @@ def _check_require_version(namespace, stacklevel):
             load_namespace_and_overrides()
     """
 
-    global _active_imports, _implicit_required
+    was_loaded = repository.is_registered(namespace)
 
-    # This keeps track of the recursion level so we only check for
-    # explicitly imported namespaces and not the ones imported in overrides
-    _active_imports.append(namespace)
+    yield
 
-    try:
-        yield
-    except:
-        raise
-    else:
-        # Keep track of all dependency versions forced due to this import, so
-        # we don't warn for them in the future. This mirrors the import
-        # behavior where importing will get an older version if a previous
-        # import depended on it.
-        for dependency in _get_all_dependencies(namespace):
-            ns, version = dependency.split("-", 1)
-            _implicit_required[ns] = version
-    finally:
-        _active_imports.remove(namespace)
+    if was_loaded:
+        # it was loaded before by another import which depended on this
+        # namespace or by C code like libpeas
+        return
 
-    # Warn in case:
-    #  * this namespace was explicitly imported
-    #  * the version wasn't forced using require_version()
-    #  * the version wasn't forced implicitly by a previous import
-    #  * this namespace isn't part of glib (we have bigger problems if
-    #    versions change there)
-    is_explicit_import = not _active_imports
-    version_required = gi.get_required_version(namespace) is not None
-    version_implicit = namespace in _implicit_required
-    is_in_glib = namespace in ("GLib", "GObject", "Gio")
+    if namespace in ("GLib", "GObject", "Gio"):
+        # part of glib (we have bigger problems if versions change there)
+        return
 
-    if is_explicit_import and not version_required and \
-            not version_implicit and not is_in_glib:
-        version = repository.get_version(namespace)
-        warnings.warn(
-            "%(namespace)s was imported without specifying a version first. "
-            "Use gi.require_version('%(namespace)s', '%(version)s') before "
-            "import to ensure that the right version gets loaded."
-            % {"namespace": namespace, "version": version},
-            PyGIWarning, stacklevel=stacklevel)
+    if gi.get_required_version(namespace) is not None:
+        # the version was forced using require_version()
+        return
+
+    version = repository.get_version(namespace)
+    warnings.warn(
+        "%(namespace)s was imported without specifying a version first. "
+        "Use gi.require_version('%(namespace)s', '%(version)s') before "
+        "import to ensure that the right version gets loaded."
+        % {"namespace": namespace, "version": version},
+        PyGIWarning, stacklevel=stacklevel)
 
 
 class DynamicImporter(object):
